idea/testData/script/definition/highlighting/throwingResolver/script.kts
<error descr="TestDependenciesResolver threw exception IllegalStateException:
 Exception from resolver">
</error>
val s = 3
val g = 4